force-app/main/default/objects/Activity/fields/Activity_Id__c.field-meta.xml
<CustomField>
    <fullName>Activity_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity-Id</label>
    <type>Text</type>
</CustomField>