force-app/main/default/objects/Activity/fields/Call__c.field-meta.xml
<CustomField>
    <fullName>Call__c</fullName>
    <formula>IF( LEFT ( Subject , 17)=&quot;[Outreach] [Call]&quot; , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call</label>
    <type>Checkbox</type>
</CustomField>