force-app/main/default/objects/Activity/fields/Call_Recording__c.field-meta.xml
<CustomField>
    <fullName>Call_Recording__c</fullName>
    <description>Outreach call recording</description>
    <label>Call Recording (Chorus)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>