force-app/main/default/objects/Activity/fields/Call_Recording_O__c.field-meta.xml
<CustomField>
    <fullName>Call_Recording_O__c</fullName>
    <description>Outreach Call Recording</description>
    <label>Call Recording (Outreach)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>