force-app/main/default/objects/Activity/fields/Connected_with_Client_c__c.field-meta.xml
<CustomField>
    <fullName>Connected_with_Client_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connected_with_Client__c</label>
    <type>Checkbox</type>
</CustomField>