force-app/main/default/objects/Activity/fields/External_Attendees__c.field-meta.xml
<CustomField>
    <fullName>External_Attendees__c</fullName>
    <description>Semicolon-separated list of external attendee emails from Google Calendar. Maintained by the GCal sync robot.</description>
    <label>External_Attendees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>