force-app/main/default/objects/Activity/fields/Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox used to exclude activity/task from reporting</description>
    <inlineHelpText>checkbox used to exclude activity/task from reporting</inlineHelpText>
    <label>Follow_Up</label>
    <type>Checkbox</type>
</CustomField>