force-app/main/default/objects/Activity/fields/GCal_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>GCal_Event_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Google Calendar event ID. Idempotency key for the GCal sync robot. Do not edit.</description>
    <externalId>true</externalId>
    <label>GCal_Event_Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>