force-app/main/default/objects/Activity/fields/GCal_Organizer_Email__c.field-meta.xml
<CustomField>
    <fullName>GCal_Organizer_Email__c</fullName>
    <label>GCal_Organizer_Email</label>
    <type>Email</type>
</CustomField>