force-app/main/default/objects/Activity/fields/Incoming_Email__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Email__c</fullName>
    <formula>IF( LEFT ( Subject , 23 )= &quot;[Outreach] [Email] [In]&quot; , TRUE , FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incoming Email</label>
    <type>Checkbox</type>
</CustomField>