force-app/main/default/objects/Activity/fields/Match_Method__c.field-meta.xml
<CustomField>
    <fullName>Match_Method__c</fullName>
    <inlineHelpText>How the GCal sync robot matched this event to its Account.</inlineHelpText>
    <label>Match_Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Website Domain</fullName>
            </value>
            <value>
                <fullName>Contact Email Domain</fullName>
            </value>
            <value>
                <fullName>Lead Mapped Account</fullName>
            </value>
            <value>
                <fullName>Title Regex</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>lead2acct</fullName>
            </value>
            <value>
                <fullName>unmatched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>