force-app/main/default/objects/Activity/fields/Meeting_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meeting_Scheduled?</label>
    <type>Checkbox</type>
</CustomField>