force-app/main/default/objects/Activity/fields/OR_Call_Result__c.field-meta.xml
<CustomField>
    <fullName>OR_Call_Result__c</fullName>
    <label>OR_Call Result</label>
    <length>200</length>
    <type>Text</type>
</CustomField>