force-app/main/default/objects/Activity/fields/Outgoing_Email__c.field-meta.xml
<CustomField>
    <fullName>Outgoing_Email__c</fullName>
    <formula>IF( LEFT ( Subject , 24 )= &quot;[Outreach] [Email] [Out]&quot; , TRUE , FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outgoing Email</label>
    <type>Checkbox</type>
</CustomField>