force-app/main/default/objects/Activity/fields/Outreach_Attributed_Sequence_Name__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Attributed_Sequence_Name__c</fullName>
    <label>Attributed Sequence Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>