force-app/main/default/objects/Activity/fields/Salesloft_Bounced__c.field-meta.xml
<CustomField>
    <fullName>Salesloft_Bounced__c</fullName>
    <label>Bounced</label>
    <length>255</length>
    <type>Text</type>
</CustomField>