force-app/main/default/objects/Activity/fields/This_Month__c.field-meta.xml
<CustomField>
    <fullName>This_Month__c</fullName>
    <formula>IF( TEXT(MONTH(TODAY()))&amp;&quot;-&quot;&amp;TEXT(YEAR(TODAY())) = TEXT(MONTH(ActivityDate))&amp;&quot;-&quot;&amp;TEXT(YEAR(ActivityDate)) , TRUE , FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Month</label>
    <type>Checkbox</type>
</CustomField>